--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@charset "UTF-8";
+
 /*-- ベース --*/
 
 * {
@@ -22,7 +24,6 @@ body {
 body * {
     word-break: break-all;
     word-wrap: break-word;
-    overflow-wrap: break-word;
 }
 
 .wrap {
@@ -34,14 +35,25 @@ button {
     padding: 0;
 }
 
-a {
-    transition: opacity 0.2s 0s linear;
+input,
+textarea {
+    appearance: none;
+}
+
+a,
+.hover,
+article,
+.check-list label,
+[type="submit"] {
+    transition: opacity 0.1s 0s linear;
 }
 
 a:hover,
-.hover {
-    opacity: 0.5!important;
-    transition: opacity 0.2s 0s linear;
+.hover,
+article:not(.overlay):hover,
+.check-list label:hover,
+[type="submit"]:hover {
+    opacity: 0.7!important;
 }
 
 /*-- パーツ --*/
@@ -55,6 +67,126 @@ a:hover,
     background: url() no-repeat 50% 50%;
     background-size: cover;
     vertical-align: middle;
+}
+
+.box {
+    margin-top: 10px;
+    padding: 10px 10px 5px 10px;
+    border-radius: 5px;
+    background: #fff;
+}
+
+.paragraph {
+    padding-top: 10px;
+    border-top: 1px solid #ccc;
+}
+
+/*--  フォーム --*/
+
+[type="submit"] {
+    cursor: pointer;
+    display: block;
+    width: 100%;
+    height: 2.5em;
+    line-height: 2.5em;
+    color: #fff;
+    border: none;
+    border-radius: 3px;
+    background: #ff3366;
+    font-weight: bold;
+    font-size: 1.5rem;
+}
+
+[type="text"],
+[type="url"],
+[type="number"],
+textarea {
+    width: 100%;
+    height: 3em;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 3px;
+}
+
+[type="radio"],
+[type="checkbox"] {
+    position: fixed;
+    top: -100%;
+    left: -100%;
+    z-index: -9999;
+}
+
+/*-- サイトヘッダ --*/
+
+#common-header {
+    z-index: 1;
+}
+
+#common-header h2 {
+    margin: 0;
+}
+
+#form-url-input {
+    overflow: hidden;
+    position: relative;
+    height: 4rem;
+    margin: 0 auto 10px auto;
+    padding: 0;
+}
+
+#form-url-input [type="url"] {
+    position: relative;
+    width: calc(100% - 5.5em);
+    margin: 0;
+}
+
+#form-url-input [type="submit"] {
+    position: absolute;
+    top: 0;
+    right: 0;
+    display: inline-block;
+    width: auto;
+    height: 2.6em;
+    line-height: 2.6em;
+    margin: 0;
+    padding: 0 1em;
+}
+
+#tag-input-list {
+    display: inline;
+}
+
+#tag-input-list [type="text"] {
+    width: 7em;
+    margin-bottom: 5px;
+}
+
+#tag-input {
+    display: inline-block;
+    width: 6em;
+    height: 2.4em;
+    line-height: 2.4em;
+    margin-bottom: 5px;
+}
+
+.check-list > li {
+    display: inline-block;
+    margin: 0 5px 5px 0;
+}
+
+.check-list label {
+    cursor: pointer;
+    display: inline-block;
+    height: 2em;
+    line-height: 2em;
+    padding: 0 0.5em;
+    color: #fff;
+    border-radius: 2px;
+    background: #999;
+}
+
+.check-list :checked + label {
+    background: #ff3366;
 }
 
 /*-- リスト --*/
@@ -112,7 +244,18 @@ a:hover,
     margin: 10px;
 }
 
+.comment-list > li > span:last-child {
+    display: inline-block;
+    width: calc(100% - 60px);
+    padding: 10px 10px 10px 0;
+    vertical-align: top;
+}
+
 /*-- article --*/
+
+#article-list {
+    position: static;
+}
 
 #article-list > li:first-child {
     width: -webkit-calc(100% - 20px);
@@ -126,18 +269,6 @@ article {
     border: 1px solid rgba(0,0,0,0.4);
     border-radius: 4px;
     box-shadow: 0 0 4px rgba(0,0,0,0.4);
-    transition: opacity 0.2s 0s linear;
-}
-
-article.hover,
-article:hover,
-article.overlay > a:hover {
-    opacity: 0.7;
-    transition: opacity 0.2s 0s linear;
-}
-
-article.overlay:hover {
-    opacity: 1;
 }
 
 article > a:link,
@@ -240,6 +371,17 @@ article.overlay .account-list {
     display: block;
 }
 
+/*--  コメントtextarea --*/
+
+.comment-input textarea {
+    resize: none;
+    margin: 20px 0 10px 0;
+}
+
+.comment-input textarea:focus {
+    height: 10em;
+}
+
 /*-- overlay -- */
 
 #overlay {
@@ -253,7 +395,6 @@ article.overlay .account-list {
     background: rgba(0,0,0,0.4);
     z-index: 1000;
 }
-
 @media screen and (max-width: 640px){
 
     .wrap,
